# delphi

./: Cargo.toml  README.md
Results/magic/: iscas85_c17_magic.v  iscas85_c7552_magic.v  iscas_custom_magic.v
Results/micro_ins_compact/: iscas85_c17_compact.txt  iscas_custom_compact.txt
Results/micro_ins_naive/: iscas85_c17_naive.txt  iscas_custom_naive.txt
Results/schedule_stats/: iscas85_c17_stats.txt  iscas85_c7552_stats.txt  iscas_custom_stats.txt
src/: lib.rs  main.rs
src/generator/: mod.rs
src/mapper/: mod.rs
src/parallel/: mod.rs
src/parser/: mod.rs  parsers.rs
src/scheduler/: mod.rs
